--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Metaperson Sample</string>
+    <string name="app_name">Metaperson Showase</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="create_avatar">Create Metaperson</string>
 </resources>
